tests/invalid/distinct_types.lang
module main

typedef MyInt distinct int;

func main() {
    var a: int = 123;
    var b: MyInt = a;
}
